[tool.poetry]
name = "Koa_test"
version = "0.0.1"
description = "A django api that checks for points separated on an axis"
authors = ["LennyManyeks <lennymanyeki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2.1"
djangorestframework = "^3.14.0"
alembic = "^1.11.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
